feat: 당첨 번호가 서로 중복되면 예외가 발생한다